Revision history for Perl extension ClearCase::Wrapper::MGi.

0.01 Tue Sep 25 15:51:36 IST 2007
	- Initial version: port of lsgen on top of ClearCase::Wrapper

0.02 Tue Oct  2 20:39:17 IST 2007
	- Fixed bug reported by Tatyana Shpichko: tested the argument(s)

0.03 Fri Oct  5 18:04:50 IST 2007
	- Fixed bug with branch names matching part of one another
	- Initial version of checkout

0.04 Wed Oct 10 12:00:38 IST 2007
	- Run lsgen and checkout under CtCmd or IPC if installed.
	- Bug fixes: Branch type constraint check on Windows; respect
	  for functionality added in ClearCase::Wrapper; support for
	  all options; initialisation of the return value.

0.05 Thu Oct 11 18:09:17 IST 2007
	- Bug fixes: lsgen input rejected unless version.  Wildcards
	  supported on Windows.  Wrong semantics for -bra[nch] in
	  checkout. Returned to default if either -ver or -bra used.

0.06 Tue Nov  6 17:51:41 GMT 2007
	- Support for checkout via view extended path

0.07 Fri Oct 24 17:48:25 BST 2008
	- lsgen: skip branch objects with digits in their name
	- lsgen: when checked out from version 0, use source of merge arrow
	- lsgen: use of portable quoting pattern
	- checkcs/co: fix for use of relative path
	- co: less verbose, and cleaning away the trivial contrib files

0.08 Sat Mar  7 10:58:19 GMTST 2009
	- co: the internal mkbranch defaults to -nc
	- lsgen: extracted the parsing of the version tree

0.09 Sun Mar 22 17:50:40 GMTST 2009
	- lsgen: fix to the handling of -obs
	- lsgen: indentation of incestual parent
	- diff: -predecessor from the genealogy
	- diff: special case for checkedout version
	- lsgen/diff: fix when selected branch/0
	- mkbranch